example/errors/lexer/no_digits_literal.box
set x: int = 0b_______;
set x: int = 0o_______;
set x: int = 0h_______;
